# blog_project

./: pyproject.toml
article/: admin.py  permission.py  views.py
article/migrations/: 0001_initial.py  0002_initial.py  0003_like.py  0004_share.py
authentication/: permission.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
blog_project/: settings.py  urls.py
